--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a href="event.html#home" class="navbar-brand inner-link"><img alt="" src="images/logo-green.png"></a>
+                        <a href="index.html#home" class="navbar-brand inner-link"><img alt="" src="images/logo-green.png"></a>
                     </div> 
                         <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse col-md-10">
                             <ul class="nav navbar-nav">
-                                <li><a class="inner-link" href="event.html#about">About</a></li>
-                                <li><a class="inner-link" href="event.html#speakers">Features</a></li>
-                                <li><a class="inner-link" href="event.html#schedule">Schedule</a></li>
-                                <li><a class="inner-link" href="event.html#sponsors">Why Teachzy</a></li>
-                                <li><a class="inner-link" href="event.html#gallery">Gallery</a></li>
-                                <li><a class="inner-link" href="event.html#register">Register</a></li>
-                                <li><a class="inner-link" href="event.html#contact">Contact</a></li>
+                                <li><a class="inner-link" href="index.html#about">About</a></li>
+                                <li><a class="inner-link" href="index.html#speakers">Features</a></li>
+                                <li><a class="inner-link" href="index.html#schedule">Schedule</a></li>
+                                <li><a class="inner-link" href="index.html#sponsors">Why Teachzy</a></li>
+                                <li><a class="inner-link" href="index.html#gallery">Gallery</a></li>
+                                <li><a class="inner-link" href="index.html#register">Register</a></li>
+                                <li><a class="inner-link" href="index.html#contact">Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -95,7 +95,7 @@
                             <span class="text-extra-large margin-eleven no-margin-lr no-margin-top display-inline-block alt-font black-text xs-margin-eleven xs-no-margin-lr xs-no-margin-top">Teachzy is an efficient communication platform designed specifically to meet Teacher’s and Student’s need of a structured academic environment online.</span>
                             <p class="text-medium">A communication application designed specifically for teachers and students catering their need to stay connected outside classrooms . The application design makes it easily accessible for anyone who is a stakeholder in the education. 
                            <br> It offers a platform to communicate, interact and stay updated with the ongoing curriculum. Also reduces the amount of time teachers have to put in to maintain lists and make entries.</p>
-                            <a class="highlight-button-black-border btn btn-medium button margin-ten no-margin-lr inner-link" href="event.html#schedule">Read more</a>
+                            <a class="highlight-button-black-border btn btn-medium button margin-ten no-margin-lr inner-link" href="index.html#schedule">Read more</a>
                         </div>
                         <div class="col-md-6 col-sm-12 col-md-offset-1 sm-padding-five sm-no-padding-lr sm-no-padding-bottom xs-margin-eleven xs-no-margin-lr xs-no-margin-bottom">
                             <div class="col-md-12 no-padding">
@@ -142,7 +142,7 @@
                         <!-- time -->
                         <div id="counter-event" enddate="2016/12/25 12:00:00" class="white-text alt-font center-col margin-eight no-margin-lr sm-margin-fifteen sm-no-margin-lr xs-no-border"></div>
                         <!-- end time -->
-                        <a href="event.html#register" class="highlight-button-blue btn btn-medium button letter-spacing-1 inner-link">Read more </a>
+                        <a href="index.html#register" class="highlight-button-blue btn btn-medium button letter-spacing-1 inner-link">Read more </a>
                     </div>
                 </div>
             </div>
@@ -252,16 +252,16 @@
                 <div class="row">
                     <div class="margin-twelve no-margin-lr no-margin-bottom sm-margin-seven sm-no-margin-lr sm-no-margin-bottom clearfix ">
                         <div class="col-md-3 col-sm-6 text-center">
-                            <div class="client-logo sm-display-inline"><a href="event.html#"><img class="sm-margin-thirteen sm-no-margin-lr" src="images/event-img4.png" alt=""/></a></div>
+                            <div class="client-logo sm-display-inline"><a href="index.html#"><img class="sm-margin-thirteen sm-no-margin-lr" src="images/event-img4.png" alt=""/></a></div>
                         </div>
                         <div class="col-md-3 col-sm-6 text-center">
-                            <div class="client-logo sm-display-inline"><a href="event.html#"><img class="sm-margin-thirteen sm-no-margin-lr" src="images/event-img5.png" alt=""/></a></div>
+                            <div class="client-logo sm-display-inline"><a href="index.html#"><img class="sm-margin-thirteen sm-no-margin-lr" src="images/event-img5.png" alt=""/></a></div>
                         </div>
                         <div class="col-md-3 col-sm-6 text-center">
-                            <div class="client-logo sm-display-inline"><a href="event.html#"><img class="xs-margin-thirteen xs-no-margin-lr" src="images/event-img6.png" alt=""/></a></div>
+                            <div class="client-logo sm-display-inline"><a href="index.html#"><img class="xs-margin-thirteen xs-no-margin-lr" src="images/event-img6.png" alt=""/></a></div>
                         </div>
                         <div class="col-md-3 col-sm-6 text-center">
-                            <div class="client-logo sm-display-inline"><a href="event.html#"><img class="xs-margin-thirteen xs-no-margin-lr" src="images/event-img7.png" alt=""/></a></div>
+                            <div class="client-logo sm-display-inline"><a href="index.html#"><img class="xs-margin-thirteen xs-no-margin-lr" src="images/event-img7.png" alt=""/></a></div>
                         </div>
                     </div>
                 </div>
