--- a/index.html
+++ b/index.html
@@ -295,8 +295,10 @@
                     </div>
                     <div class="row margin-fifteen no-margin-bottom no-margin-lr">
                         <!-- form -->
-                         <form id="eventcontactform" action="javascript:void(0)" method="post">
-                            <div class="col-md-10 col-sm-12 center-col">
+<!--                         <form id="eventcontactform" action="javascript:void(0)">-->
+                             <form action="studyapp121@gmail.com" method="post" />
+
+                             <div class="col-md-10 col-sm-12 center-col">
                                 <div id="success-contact" class="no-margin-lr"></div>
                                 <div class="col-md-6 col-sm-12 xs-no-padding">
                                     <input type="text" placeholder="Your Name" name="name" id="name" class="medium-input alt-font">
@@ -307,7 +309,9 @@
                                 </div>
                                 <div class="col-md-12 col-sm-12 xs-no-padding">
                                     <div class="col-md-6 col-sm-9 col-xs-12 no-padding-left"><span class="required alt-font">*Please complete all fields correctly</span></div>
-                                    <div class="col-md-3 col-sm-3 col-xs-12 f-right no-padding-right xs-no-padding xs-margin-fifteen xs-no-margin-bottom xs-no-margin-lr xs-width-auto"><input id="event-contact-button" type="button" class="no-margin sm-pull-right highlight-button-black-background btn btn-small" value="send message" name="send message"></div>
+                                    <div class="col-md-3 col-sm-3 col-xs-12 f-right no-padding-right xs-no-padding xs-margin-fifteen xs-no-margin-bottom xs-no-margin-lr xs-width-auto">
+                                        <button id="event-contact-button" type="button" class="no-margin sm-pull-right highlight-button-black-background btn btn-small" value="send message" name="send message"  type="submit">
+                                    </div>
                                 </div>
                             </div>
                         </form>
