--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <link rel="stylesheet" href="css/style.css" />
         <!-- responsive css -->
         <link rel="stylesheet" href="css/responsive.css" />
+        <meta name="referrer" content="origin">
         <!--[if IE]>
             <script src="js/html5shiv.js"></script>
         <![endif]-->
@@ -296,7 +297,8 @@
                     <div class="row margin-fifteen no-margin-bottom no-margin-lr">
                         <!-- form -->
 <!--                         <form id="eventcontactform" action="javascript:void(0)">-->
-                             <form action="studyapp121@gmail.com" method="post" />
+                             <form action=
+                                        "https://formspree.io/studyapp121@gmail.com" method="POST">
 
                              <div class="col-md-10 col-sm-12 center-col">
                                 <div id="success-contact" class="no-margin-lr"></div>
@@ -310,7 +312,8 @@
                                 <div class="col-md-12 col-sm-12 xs-no-padding">
                                     <div class="col-md-6 col-sm-9 col-xs-12 no-padding-left"><span class="required alt-font">*Please complete all fields correctly</span></div>
                                     <div class="col-md-3 col-sm-3 col-xs-12 f-right no-padding-right xs-no-padding xs-margin-fifteen xs-no-margin-bottom xs-no-margin-lr xs-width-auto">
-                                        <button id="event-contact-button" type="button" class="no-margin sm-pull-right highlight-button-black-background btn btn-small" value="send message" name="send message"  type="submit">
+                                        <input id="event-contact-button" type="button submit" class="no-margin sm-pull-right highlight-button-black-background btn btn-small" value="send message" name="send message" >
+                                        <button type="submit"> lkas</button>
                                     </div>
                                 </div>
                             </div>
