--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-4 col-xs-12 text-center architecture-bio overflow-hidden xs-no-padding">
                         <div class="architecture-img">
-                            <img src="images/architecture-img19.jpg" alt=""/>
+                            <img src="images/screenshot_1.png" alt=""/>
                         </div>
                         <div class="architecture-details bg-transparent-deep-blue text-left padding-fifteen sm-padding-eleven center-col md-width-90 xs-width-90">
                             <span class="text-large font-weight-600 letter-spacing-1 alt-font white-text text-uppercase display-block">Sancho Pansa</span>
@@ -178,7 +178,7 @@
                     </div>
                     <div class="col-md-4 col-sm-4 col-xs-12 text-center architecture-bio overflow-hidden xs-no-padding">
                         <div class="architecture-img">
-                            <img src="images/architecture-img20.jpg" alt=""/>
+                            <img src="images/screenshot_2.png" alt=""/>
                         </div>
                         <div class="architecture-details bg-transparent-deep-blue text-left padding-fifteen sm-padding-eleven center-col md-width-90 xs-width-90">
                             <span class="text-large font-weight-600 letter-spacing-1 alt-font white-text text-uppercase display-block">Herman Miller</span>
@@ -206,7 +206,7 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-4 col-xs-12 text-center architecture-bio overflow-hidden xs-no-padding">
                         <div class="architecture-img">
-                            <img src="images/architecture-img19.jpg" alt=""/>
+                            <img src="images/screenshot_1.png" alt=""/>
                         </div>
                         <div class="architecture-details bg-transparent-deep-blue text-left padding-fifteen sm-padding-eleven center-col md-width-90 xs-width-90">
                             <span class="text-large font-weight-600 letter-spacing-1 alt-font white-text text-uppercase display-block">Sancho Pansa</span>
@@ -296,9 +296,9 @@
                     </div>
                     <div class="row margin-fifteen no-margin-bottom no-margin-lr">
                         <!-- form -->
-<!--                         <form id="eventcontactform" action="javascript:void(0)">-->
-                             <form action=
-                                        "https://formspree.io/studyapp121@gmail.com" method="POST">
+                         <form id="eventcontactform" action="javascript:void(0)">
+<!--                        <form action="https://teachzy-form.herokuapp.com/contact" method="post" target="hiddenFrame" -->
+                             >
 
                              <div class="col-md-10 col-sm-12 center-col">
                                 <div id="success-contact" class="no-margin-lr"></div>
@@ -307,13 +307,13 @@
                                     <input type="text" placeholder="Your Email" name="email" id="email" class="medium-input alt-font">
                                 </div>
                                 <div class="col-md-6 col-sm-12 xs-no-padding">
-                                    <textarea placeholder="Your Message" name="comment" id="comment" class="medium-input alt-font" style="height:122px"></textarea>
+                                    <textarea placeholder="Your Message" name="message" id="comment" class="medium-input alt-font" style="height:122px"></textarea>
                                 </div>
                                 <div class="col-md-12 col-sm-12 xs-no-padding">
                                     <div class="col-md-6 col-sm-9 col-xs-12 no-padding-left"><span class="required alt-font">*Please complete all fields correctly</span></div>
                                     <div class="col-md-3 col-sm-3 col-xs-12 f-right no-padding-right xs-no-padding xs-margin-fifteen xs-no-margin-bottom xs-no-margin-lr xs-width-auto">
-                                        <input id="event-contact-button" type="button submit" class="no-margin sm-pull-right highlight-button-black-background btn btn-small" value="send message" name="send message" >
-                                        <button type="submit"> lkas</button>
+<!--                                        <input id="event-contact-button" type="button submit" class="no-margin sm-pull-right highlight-button-black-background btn btn-small" value="send message" name="send message" >-->
+                                        <button  id="event-contact-button" type="submit" class="no-margin sm-pull-right highlight-button-black-background btn btn-small" > Send Enquiry</button>
                                     </div>
                                 </div>
                             </div>
@@ -324,6 +324,9 @@
             </section>
 
         </footer>
+        <iframe name="hiddenFrame" width="0" height="0" border="0" style="display: none;"></iframe>
+
+
         <!-- scroll to top -->
         <a href="javascript:;" class="scrollToTop"><i class="fa fa-angle-up"></i></a>
         <!-- end scroll to top -->
@@ -361,6 +364,7 @@
         <script type="text/javascript" src="js/jquery.fitvids.js"></script>
         <!-- setting -->
         <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript"></script>
     </body>
 </html>
 
