--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a href="index.html#home" class="navbar-brand inner-link"><img alt="" src="images/logo-green.png"></a>
+                        <a href="index.html#home" class="navbar-brand inner-link">
+                           <strong style="color: white;"> TEACHZY </strong>
+                        </a>
                     </div> 
                         <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse col-md-10">
                             <ul class="nav navbar-nav">
@@ -283,7 +285,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 col-sm-12 text-center">
-                            <span class="title-medium alt-font font-weight-700 text-uppercase deep-blue-text display-block sm-title-large"><span class="deep-green-text">—</span> Contact Us</span>
+                            <span class="title-medium alt-font font-weight-700 text-uppercase deep-blue-text display-block sm-title-large"><span class="deep-green-text">—</span> Contact us for a FREE DEMO</span>
                         </div>
                     </div>
                     <div class="margin-seventeen no-margin-bottom no-margin-lr clearfix">
@@ -295,11 +297,11 @@
                                 </div>
                                 <div class="col-md-4 col-sm-4 col-xs-12 text-center xs-margin-nineteen xs-no-margin-lr xs-no-margin-top">
                                     <i class="icon-clipboard icon-small display-block margin-seven no-margin-top no-margin-lr"></i>
-                                    <span class="alt-font text-uppercase">General Enquiries<br>sales@domain.com</span>
+                                    <span class="alt-font text-uppercase" >General Enquiries<br> <a href="mailto:contactus.teachzy@gmail.com"> contactus.teachzy@gmail.com </a> </span>
                                 </div>
                                 <div class="col-md-4 col-sm-4 col-xs-12 text-center xs-margin-nineteen xs-no-margin-lr xs-no-margin-top">
                                     <i class="icon-phone icon-small display-block margin-seven no-margin-top no-margin-lr"></i>
-                                    <span class="alt-font text-uppercase">Call us Today<br>+91  9582206402</span>
+                                    <span class="alt-font text-uppercase">Call us Today<br>+91-9582206401, +91-8700853090</span>
                                 </div>
                             </div>
                         </div>
@@ -317,7 +319,9 @@
                                     <input type="text" placeholder="Your Email" name="email" id="email" class="medium-input alt-font">
                                 </div>
                                 <div class="col-md-6 col-sm-12 xs-no-padding">
-                                    <textarea placeholder="Your Message" name="message" id="comment" class="medium-input alt-font" style="height:122px"></textarea>
+                                    <input type="tel" placeholder="Contact number" name="phone"  class="medium-input alt-font">
+                                    <input type="text" placeholder="Your City" name="city"  class="medium-input alt-font">
+
                                 </div>
                                 <div class="col-md-12 col-sm-12 xs-no-padding">
                                     <div class="col-md-6 col-sm-9 col-xs-12 no-padding-left"><span class="required alt-font">*Please complete all fields correctly</span></div>
