--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html class="no-js" lang="en">
     <head>
         <!-- title -->
-        <title>Brando Responsive & Multipurpose OnePage Template - Event</title>
+        <title>An application for teachers and students to stay connected</title>
         <!-- description -->
-        <meta name="description" content="A great collection of creative, responsive, elegant onepage templates for different industries.">
+        <meta name="description" content="An application for teachers and students to stay connected">
         <!-- keywords -->
         <meta name="keywords" content="creative, css3, html5, onepage, multipurpose, bootstrap, responsive, agency, architecture, resume, blog, photography, restaurant, portfolio, spa, travel, wedding, coming soon">
         <meta charset="utf-8">
