--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <!-- description -->
         <meta name="description" content="An application for teachers and students to stay connected">
         <!-- keywords -->
-        <meta name="keywords" content="creative, css3, html5, onepage, multipurpose, bootstrap, responsive, agency, architecture, resume, blog, photography, restaurant, portfolio, spa, travel, wedding, coming soon">
+        <meta name="keywords" content="attendance tracker, tuttion app, free app, edtec">
         <meta charset="utf-8">
         <meta name="author" content="ThemeZaa">
         <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
@@ -59,9 +59,9 @@
                                 <li><a class="inner-link" href="index.html#about">About</a></li>
                                 <li><a class="inner-link" href="index.html#speakers">Features</a></li>
                                 <li><a class="inner-link" href="index.html#schedule">Schedule</a></li>
-                                <li><a class="inner-link" href="index.html#sponsors">Why Teachzy</a></li>
-                                <li><a class="inner-link" href="index.html#gallery">Gallery</a></li>
-                                <li><a class="inner-link" href="index.html#register">Register</a></li>
+<!--                                <li><a class="inner-link" href="index.html#sponsors">Why Teachzy</a></li>-->
+<!--                                <li><a class="inner-link" href="index.html#gallery">Gallery</a></li>-->
+<!--                                <li><a class="inner-link" href="index.html#register">Register</a></li>-->
                                 <li><a class="inner-link" href="index.html#contact">Contact</a></li>
                             </ul>
                         </div>
