--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <ul class="nav navbar-nav">
                                 <li><a class="inner-link" href="index.html#about">About</a></li>
                                 <li><a class="inner-link" href="index.html#speakers">Features</a></li>
-                                <li><a class="inner-link" href="index.html#schedule">Schedule</a></li>
+<!--                                <li><a class="inner-link" href="index.html#schedule">Schedule</a></li>-->
 <!--                                <li><a class="inner-link" href="index.html#sponsors">Why Teachzy</a></li>-->
 <!--                                <li><a class="inner-link" href="index.html#gallery">Gallery</a></li>-->
 <!--                                <li><a class="inner-link" href="index.html#register">Register</a></li>-->
