--- a/index.html
+++ b/index.html
@@ -379,6 +379,16 @@
         <!-- setting -->
         <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript"></script>
+                                  <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160139735-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-160139735-1');
+    </script>
+
     </body>
 </html>
 
